--- a/app/src/main/res/layout/fragment_home_screen_buttons.xml
+++ b/app/src/main/res/layout/fragment_home_screen_buttons.xml
@@ -1,12 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="prepareias.tychestudios.com.prepareias.HomeScreenButtonsFragment">
 
-  <!--  <Button
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Curret Affairs"
         android:id="@+id/current_affairs"
@@ -21,14 +23,6 @@
         android:text="General Studies"
         android:id="@+id/generalStudies"
         android:layout_below="@+id/current_affairs"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />-->
-    <FrameLayout
-        android:id="@+id/fragment_placeholder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/generalStudies"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/generalStudies" />
+        />
 
 </RelativeLayout>
