--- a/app/src/main/res/layout/fragment_current_affair_section.xml
+++ b/app/src/main/res/layout/fragment_current_affair_section.xml
@@ -1,10 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="prepareias.tychestudios.com.prepareias.CurrentAffairSectionFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/swipe_container"
+android:layout_width="match_parent"
+android:layout_height="match_parent" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ListView
+        android:id="@+id/calist"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_row_selector" />
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
