--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -1,16 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="prepareias.tychestudios.com.prepareias.quiz.QuestionFragment">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="10dp">
 
-        <TextView
+        <WebView
             android:padding="5dp"
             android:id="@+id/questiontv"
             android:layout_width="match_parent"
@@ -45,9 +48,9 @@
                 android:id="@+id/optionA"
                 android:text="Red"
                 android:paddingLeft="10dp"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -69,9 +72,9 @@
                 android:id="@+id/optionB"
                 android:text="Black"
                 android:paddingLeft="10dp"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -93,9 +96,9 @@
                 android:id="@+id/optionC"
                 android:text="White"
                 android:paddingLeft="10dp"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -117,15 +120,56 @@
                 android:id="@+id/optionD"
                 android:text="Blue"
                 android:paddingLeft="10dp"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
         </LinearLayout>
     </LinearLayout>
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFA726"
-        android:text="Check Answer"
-        android:textSize="20sp"/>
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#607D8B"
+            android:layout_weight="0.3"
+            android:text="Prev"
+            android:textSize="20sp"
+            android:id="@+id/prev"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:text=" "/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#FFA726"
+            android:text="Check Answer"
+            android:textSize="20sp"
+            android:id="@+id/checkAnswer"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:text=" "/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_height="wrap_content"
+            android:background="#607D8B"
+            android:text="Next"
+            android:textSize="20sp"
+            android:id="@+id/next"/>
+
+    </LinearLayout>
+<WebView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/description"
+    android:textSize="16dp" />
 </LinearLayout>
+</ScrollView>
